implement build change as patch